--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 					</form>
 				</div>
 				<div id="img"></div>
-				<img src="C:\Users\webzone\Desktop\web development\3426526.jpg"/>
+				<img src="C:portfolio\3426526.jpg"/>
 			</div>
 		</div>
 		<div id="about">
@@ -51,7 +51,7 @@
 					<p>I'm a web developer and a creative, a big fan of personal development, exploration,and a believer of limitless mind. I look to forward to learn about your business and grow together. 
 					</p>
 				</div>
-				<img src="C:\Users\webzone\Desktop\web development\porfolio\new-pics.jpg"/>
+				<img src="porfolio\new-pics.jpg"/>
 			</div>
 		</div>
 		<div id="Project">
