--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 					</form>
 				</div>
 				<div id="img"></div>
-				<img src="portfolio\portfolio\3426526.jpg"/>
+				<img src="portfolio\porfolio\3426526.jpg"/>
 			</div>
 		</div>
 		<div id="about">
