--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 				  <div class="carousel-inner">
 					<div class="carousel-item active">
 					  <div id="project-card">
-						<div id="inner-card-1"></div>
+						<div id="inner-card-1"><img src="screenshot(2).png" alt="image of to-do-list app"></div>
 					  </div>
 					  <div class="carousel-caption d-none d-md-block">
 						<h5>First slide label</h5>
