--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
 				  <div class="carousel-inner">
 					<div class="carousel-item active">
 					  <div id="project-card">
-						<div id="inner-card-1"><img src="screenshot(2).png" alt="image of to-do-list app"></div>
+						<div id="inner-card-1"><img src="Screenshot(2).png" alt="image of to-do-list app"></div>
 					  </div>
 					  <div class="carousel-caption d-none d-md-block">
-						<h5>First slide label</h5>
-						<p>Some representative placeholder content for the first slide.</p>
+						<h5>A Simple TO-DO-LIST App</h5>
+						<p>This App is  created using HTML5, CSS3, BOOTSTRAP 5, VANILLA JAVASCRIPT, EXPRESS.JS, NODE.JS</p>
 					  </div>
 					</div>
 					<div class="carousel-item">
