--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 				  <div class="carousel-inner">
 					<div class="carousel-item active">
 					  <div id="project-card">
-						<img id="inner-card-1" src="Screenshot(2).png" alt="image of to-do-list app">
+						<img id="inner-card-1" src="Screenshot(2).png" alt="image of to-do-list app"/>
 					  </div>
 					  <div class="carousel-caption d-none d-md-block">
 						<h5>A Simple TO-DO-LIST App</h5>
