--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 						<img id="inner-card-1" src="Screenshot(2).png" alt="image of to-do-list app"/>
 					  </div>
 					  <div class="carousel-caption d-none d-md-block">
-						<h5>A Simple TO-DO-LIST App</h5>
+						  <h5><a href="https://to-do-list-app33.herokuapp.com/">A Simple TO-DO-LIST App</a></h5>
 						<p>This App is  created using HTML5, CSS3, BOOTSTRAP 5, VANILLA JAVASCRIPT, EXPRESS.JS, NODE.JS</p>
 					  </div>
 					</div>
