--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 				  <div class="carousel-inner">
 					<div class="carousel-item active">
 					  <div id="project-card">
-						<img id="inner-card-1" src="Screenshot(2).png" alt="image of to-do-list app"/>
+						  <div id="inner-card-1" alt="image of to-do-list app"></div>
 					  </div>
 					  <div class="carousel-caption d-none d-md-block">
 						  <h5><a href="https://to-do-list-app33.herokuapp.com/">A Simple TO-DO-LIST App</a></h5>
