--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
 						<div id="inner-card-2"></div>
 					  </div>
 					  <div class="carousel-caption d-none d-md-block">
-						<h5>Second slide label</h5>
-						<p>Some representative placeholder content for the second slide.</p>
+						  <h5><a href="https://weather-app-33.herokuapp.com/">Simpe Weather App</a></h5>
+						<p>App built using vanilla javaScript, HTML5, CSS3, Node.js, Express.js, OpenweatherAPI</p>
 					  </div>
 					</div>
 					<div class="carousel-item">
