--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 						  <div id="inner-card-1" alt="image of to-do-list app"></div>
 					  </div>
 					  <div class="carousel-caption d-none d-md-block">
-						  <h5><a href="https://to-do-list-app33.herokuapp.com/">A Simple TO-DO-LIST App</a></h5>
+						  <h5><a href="https://to-do-list-app33.herokuapp.com/" target="_blank">A Simple TO-DO-LIST App</a></h5>
 						<p>This App is  created using HTML5, CSS3, BOOTSTRAP 5, VANILLA JAVASCRIPT, EXPRESS.JS, NODE.JS</p>
 					  </div>
 					</div>
@@ -78,7 +78,7 @@
 						<div id="inner-card-2"></div>
 					  </div>
 					  <div class="carousel-caption d-none d-md-block">
-						  <h5><a href="https://weather-app-33.herokuapp.com/">Simpe Weather App</a></h5>
+						  <h5><a href="https://weather-app-33.herokuapp.com/" target="_blank">Simpe Weather App</a></h5>
 						<p>App built using vanilla javaScript, HTML5, CSS3, Node.js, Express.js, OpenweatherAPI</p>
 					  </div>
 					</div>
