--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 						<div id="inner-card-2"></div>
 					  </div>
 					  <div class="carousel-caption d-none d-md-block">
-						  <h5><a href="https://weather-app-33.herokuapp.com/" target="_blank">Simpe Weather App</a></h5>
+						  <h5><a href="https://weather-app-33.herokuapp.com/" target="_blank">Simple Weather App</a></h5>
 						<p>App built using vanilla javaScript, HTML5, CSS3, Node.js, Express.js, OpenweatherAPI</p>
 					  </div>
 					</div>
@@ -87,8 +87,8 @@
 						<div id="inner-card-3"></div> 
 					  </div>
 					  <div class="carousel-caption d-none d-md-block">
-						<h5>Third slide label</h5>
-						<p>Some representative placeholder content for the third slide.</p>
+						<h5><a href="https://greattt33.github.io/handyman/" target="_blank">Single page for Handyman Cleaning Services</h5>
+						<p>Website built Using HTML5, CSS3</p>
 					  </div>
 					</div>
 				  </div>
