--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 						<div id="inner-card-3"></div> 
 					  </div>
 					  <div class="carousel-caption d-none d-md-block">
-						<h5><a href="https://greattt33.github.io/handyman/" target="_blank">Single page for Handyman Cleaning Services</h5>
+						<h5><a href="https://greattt33.github.io/handyman/" target="_blank">Single page for Handyman Cleaning Services</a></h5>
 						<p>Website built Using HTML5, CSS3</p>
 					  </div>
 					</div>
